- Change base url

--- a/Covid-19 Tracker/Info.plist
+++ b/Covid-19 Tracker/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://corona.lmao.ninja/</string>
+	<string>https://disease.sh/v2/</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
