--- a/Covid-19 Tracker.xcodeproj/xcshareddata/xcschemes/Covid-19 Tracker.xcscheme
+++ b/Covid-19 Tracker.xcodeproj/xcshareddata/xcschemes/Covid-19 Tracker.xcscheme
@@ -27,7 +27,18 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      enableThreadSanitizer = "YES">
+      enableThreadSanitizer = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "25C47F7524408F5500A4F91F"
+            BuildableName = "Covid-19 Tracker.app"
+            BlueprintName = "Covid-19 Tracker"
+            ReferencedContainer = "container:Covid-19 Tracker.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO"
